; ModuleID = '/home/carl/AnghaBench/rofi/source/dialogs/extr_ssh.c_add_known_hosts_file.c'
source_filename = "/home/carl/AnghaBench/rofi/source/dialogs/extr_ssh.c_add_known_hosts_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i32 }

@g_strcmp0 = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [31 x i8] c"Add '%s' to UserKnownHost list\00", align 1
@.str.1 = private unnamed_addr constant [45 x i8] c"File '%s' already in UserKnownHostsFile list\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_3__*, i8*)* @add_known_hosts_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @add_known_hosts_file(%struct.TYPE_3__* %0, i8* %1) #0 {
  %3 = alloca %struct.TYPE_3__*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca i32*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %8 = load i32, i32* %7, align 4
  %9 = load i8*, i8** %4, align 8
  %10 = load i64, i64* @g_strcmp0, align 8
  %11 = trunc i64 %10 to i32
  %12 = call i32* @g_list_find_custom(i32 %8, i8* %9, i32 %11)
  store i32* %12, i32** %5, align 8
  %13 = load i32*, i32** %5, align 8
  %14 = icmp eq i32* %13, null
  br i1 %14, label %15, label %26

15:                                               ; preds = %2
  %16 = load i8*, i8** %4, align 8
  %17 = call i32 @g_debug(i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str, i64 0, i64 0), i8* %16)
  %18 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %19 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %18, i32 0, i32 0
  %20 = load i32, i32* %19, align 4
  %21 = load i8*, i8** %4, align 8
  %22 = call i32 @g_strdup(i8* %21)
  %23 = call i32 @g_list_append(i32 %20, i32 %22)
  %24 = load %struct.TYPE_3__*, %struct.TYPE_3__** %3, align 8
  %25 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %24, i32 0, i32 0
  store i32 %23, i32* %25, align 4
  br label %29

26:                                               ; preds = %2
  %27 = load i8*, i8** %4, align 8
  %28 = call i32 @g_debug(i8* getelementptr inbounds ([45 x i8], [45 x i8]* @.str.1, i64 0, i64 0), i8* %27)
  br label %29

29:                                               ; preds = %26, %15
  ret void
}

declare dso_local i32* @g_list_find_custom(i32, i8*, i32) #1

declare dso_local i32 @g_debug(i8*, i8*) #1

declare dso_local i32 @g_list_append(i32, i32) #1

declare dso_local i32 @g_strdup(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
